--- a/projects/art_pi_blink_led/board/SConscript
+++ b/projects/art_pi_blink_led/board/SConscript
@@ -9,12 +9,12 @@ src += Glob('port/*.c')
 
 # add cubemx drivers
 src += Split('''
-CubeMX_Config/Core/Src/stm32h7xx_hal_msp.c
+CubeMX_Config/Appli/Core/Src/stm32h7rsxx_hal_msp.c
 ''')
 
 path = [cwd]
 path += [cwd + '/port']
-path += [cwd + '/CubeMX_Config/Core/Inc']
+path += [cwd + '/CubeMX_Config/Appli/Core/Inc']
 
 group = DefineGroup('Drivers', src, depend = [''], CPPPATH = path)
 
