--- a/libraries/STM32H7RSxx_HAL_Driver/SConscript
+++ b/libraries/STM32H7RSxx_HAL_Driver/SConscript
@@ -7,117 +7,118 @@ cwd = GetCurrentDir()
 # The set of source files associated with this SConscript file.
 
 src = Split('''
-CMSIS/Device/ST/STM32H7xx/Source/Templates/system_stm32h7xx.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cec.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cortex.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_comp.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc_ex.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp_ex.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma_ex.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mdma.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr_ex.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc_ex.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rng.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sram.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_gpio.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc.c
-STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc_ex.c
+../CMSIS/Device/ST/STM32H7RSxx/Source/Templates/system_stm32h7rsxx.c
+Src/stm32h7rsxx_hal.c
+Src/stm32h7rsxx_hal_cec.c
+Src/stm32h7rsxx_hal_cortex.c
+Src/stm32h7rsxx_hal_crc.c
+Src/stm32h7rsxx_hal_crc_ex.c
+Src/stm32h7rsxx_hal_cryp.c
+Src/stm32h7rsxx_hal_cryp_ex.c
+Src/stm32h7rsxx_hal_dma.c
+Src/stm32h7rsxx_hal_dma_ex.c
+Src/stm32h7rsxx_hal_pwr.c
+Src/stm32h7rsxx_hal_pwr_ex.c
+Src/stm32h7rsxx_hal_rcc.c
+Src/stm32h7rsxx_hal_rcc_ex.c
+Src/stm32h7rsxx_hal_rng.c
+Src/stm32h7rsxx_hal_sram.c
+Src/stm32h7rsxx_hal_gpio.c
+Src/stm32h7rsxx_hal_adc.c
+Src/stm32h7rsxx_hal_adc_ex.c
+Src/stm32h7rsxx_hal_xspi.c
+Src/stm32h7rsxx_hal_flash.c
+Src/stm32h7rsxx_hal_flash_ex.c
 ''')
 
 if rtconfig.CROSS_TOOL == 'gcc':
-    src += [cwd + '/../../libraries/STM32H7xx_HAL/CMSIS/Device/ST/STM32H7xx/Source/Templates/gcc/startup_stm32h750xx.s']
+    src += [cwd + '/../../libraries/CMSIS/Device/ST/STM32H7RSxx/Source/Templates/gcc/startup_stm32h7s7xx.s']
 elif rtconfig.CROSS_TOOL == 'keil':
-    src += [cwd + '/../../libraries/STM32H7xx_HAL/CMSIS/Device/ST/STM32H7xx/Source/Templates/arm/startup_stm32h750xx.s']
+    src += [cwd + '/../../libraries/CMSIS/Device/ST/STM32H7RSxx/Source/Templates/arm/startup_stm32h7s7xx.s']
 elif rtconfig.CROSS_TOOL == 'iar':
-    src += [cwd + '/../../libraries/STM32H7xx_HAL/CMSIS/Device/ST/STM32H7xx/Source/Templates/iar/startup_stm32h750xx.s']
+    src += [cwd + '/../../libraries/CMSIS/Device/ST/STM32H7RSxx/Source/Templates/iar/startup_stm32h7s7xx.s']
 
 if GetDepend(['RT_USING_SERIAL']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_usart.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart_ex.c']
+    src += ['Src/stm32h7rsxx_hal_uart.c']
+    src += ['Src/stm32h7rsxx_hal_usart.c']
+    src += ['Src/stm32h7rsxx_hal_uart_ex.c']
 
-if GetDepend(['RT_USING_I2C']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c_ex.c']
+# if GetDepend(['RT_USING_I2C']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c_ex.c']
 
-if GetDepend(['RT_USING_SPI']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_qspi.c']
+# if GetDepend(['RT_USING_SPI']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_qspi.c']
 
-if GetDepend(['RT_USING_USB_HOST']) or GetDepend(['RT_USING_USB_DEVICE']):
-   # src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pccard.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd_ex.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hcd.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_usb.c']
+# if GetDepend(['RT_USING_USB_HOST']) or GetDepend(['RT_USING_USB_DEVICE']):
+#    # src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pccard.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd_ex.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hcd.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_usb.c']
 
-if GetDepend(['RT_USING_CAN']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_fdcan.c']
+# if GetDepend(['RT_USING_CAN']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_fdcan.c']
 
-if GetDepend(['RT_USING_HWTIMER']) or GetDepend(['RT_USING_PWM']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim_ex.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_lptim.c']
+# if GetDepend(['RT_USING_HWTIMER']) or GetDepend(['RT_USING_PWM']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim_ex.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_lptim.c']
 
-if GetDepend(['BSP_USING_ETH']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_eth.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_eth_ex.c']
+# if GetDepend(['BSP_USING_ETH']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_eth.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_eth_ex.c']
 
 #if GetDepend(['RT_USING_ADC']):
 #    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc.c']
 #    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc_ex.c']
 
-if GetDepend(['RT_USING_RTC']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc_ex.c']
+# if GetDepend(['RT_USING_RTC']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc_ex.c']
 
-if GetDepend(['RT_USING_WDT']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_iwdg.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_wwdg.c']
+# if GetDepend(['RT_USING_WDT']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_iwdg.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_wwdg.c']
 
-if GetDepend(['RT_USING_SDIO']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_sdmmc.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd.c']
+# if GetDepend(['RT_USING_SDIO']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_sdmmc.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd.c']
 
-if GetDepend(['RT_USING_AUDIO']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2s.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2s_ex.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sai.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sai_ex.c']
+# if GetDepend(['RT_USING_AUDIO']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2s.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2s_ex.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sai.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sai_ex.c']
 
-if GetDepend(['RT_USING_MTD_NOR']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_nor.c']
+# if GetDepend(['RT_USING_MTD_NOR']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_nor.c']
 
-if GetDepend(['RT_USING_MTD_NAND']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_nand.c']
+# if GetDepend(['RT_USING_MTD_NAND']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_nand.c']
 
-if GetDepend(['BSP_USING_SDRAM']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_fmc.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sdram.c']
+# if GetDepend(['BSP_USING_SDRAM']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_fmc.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sdram.c']
 
-if GetDepend(['BSP_USING_ON_CHIP_FLASH']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash_ex.c']
+# if GetDepend(['BSP_USING_ON_CHIP_FLASH']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash_ex.c']
 
-if GetDepend(['BSP_USING_LCD']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc.c']
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma2d.c']
+# if GetDepend(['BSP_USING_LCD']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc.c']
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma2d.c']
 
-if GetDepend(['BSP_USING_DCMI']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dcmi.c']
+# if GetDepend(['BSP_USING_DCMI']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dcmi.c']
 
-if GetDepend(['RT_USING_PM']):
-    src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_lptim.c']
+# if GetDepend(['RT_USING_PM']):
+#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_lptim.c']
 
-path = [cwd + '/STM32H7xx_HAL_Driver/Inc',
-    cwd + '/CMSIS/Device/ST/STM32H7xx/Include',
-    cwd + '/CMSIS/Include']
+path = [cwd + '/Inc',
+    cwd + '/../CMSIS/Device/ST/STM32H7RSxx/Include',
+    cwd + '/../CMSIS/Include']
 
 CPPDEFINES = ['USE_HAL_DRIVER']
 group = DefineGroup('STM32_HAL', src, depend = [''], CPPPATH = path, CPPDEFINES = CPPDEFINES)
