--- a/projects/art_pi_bootloader/.config
+++ b/projects/art_pi_bootloader/.config
@@ -1077,8 +1077,6 @@ CONFIG_BSP_USING_USB_TO_USART=y
 # CONFIG_BSP_USING_SPI_FLASH is not set
 # CONFIG_BSP_USING_QSPI_FLASH is not set
 # CONFIG_BSP_USING_WIFI is not set
-# CONFIG_BSP_USING_OV2640 is not set
-# CONFIG_BSP_USING_GC0328C is not set
 # CONFIG_BSP_USING_LVGL is not set
 # CONFIG_BSP_USING_FS is not set
 
@@ -1087,19 +1085,14 @@ CONFIG_BSP_USING_USB_TO_USART=y
 #
 CONFIG_BSP_USING_GPIO=y
 CONFIG_BSP_USING_UART=y
-# CONFIG_BSP_USING_UART1 is not set
-# CONFIG_BSP_USING_UART3 is not set
 CONFIG_BSP_USING_UART4=y
-# CONFIG_BSP_USING_UART6 is not set
+# CONFIG_BSP_USING_UART2 is not set
 # CONFIG_BSP_USING_SPI is not set
 # CONFIG_BSP_USING_QSPI is not set
 # CONFIG_BSP_USING_I2C is not set
 # CONFIG_BSP_USING_SDIO is not set
-# CONFIG_BSP_USING_SDRAM is not set
-# CONFIG_BSP_USING_ETH is not set
+# CONFIG_BSP_USING_PSRAM is not set
 # CONFIG_BSP_USING_LCD is not set
-# CONFIG_BSP_USING_DCMI is not set
-# CONFIG_BSP_USING_FDCAN is not set
 # CONFIG_BSP_USING_USBD is not set
 # CONFIG_BSP_USING_USBH is not set
 # CONFIG_BSP_USING_TIM is not set
@@ -1111,8 +1104,5 @@ CONFIG_BSP_USING_UART4=y
 #
 # CONFIG_ART_PI_USING_WIFI_6212_LIB is not set
 # CONFIG_ART_PI_USING_OTA_LIB is not set
-# CONFIG_ART_PI_TouchGFX_LIB is not set
 # CONFIG_ART_PI_USING_FTP_LIB is not set
-CONFIG_FIRMWARE_EXEC_USING_QSPI_FLASH=y
-# CONFIG_FIRMWARE_EXEC_USING_QEMU is not set
 CONFIG_RT_STUDIO_BUILT_IN=y
