--- a/projects/art_pi_blink_led/SConstruct
+++ b/projects/art_pi_blink_led/SConstruct
@@ -7,20 +7,16 @@ if os.path.exists('rt-thread'):
 else:
     RTT_ROOT = os.path.normpath(os.getcwd() + '../../../rt-thread')
 
-# set RTT_ROOT
-if not os.getenv("RTT_ROOT"): 
-    RTT_ROOT="rt-thread"
-
 sys.path = sys.path + [os.path.join(RTT_ROOT, 'tools')]
 try:
     from building import *
-except:
+except Exception as e:
+    print("Error message:", e.message)
     print('Cannot found RT-Thread root directory, please check RTT_ROOT')
     print(RTT_ROOT)
-    exit(-1)
+    sys.exit(-1)
 
-TARGET = 'rt-thread.' + rtconfig.TARGET_EXT
-
+TARGET = 'rtthread.' + rtconfig.TARGET_EXT
 DefaultEnvironment(tools=[])
 env = Environment(tools = ['mingw'],
     AS = rtconfig.AS, ASFLAGS = rtconfig.AFLAGS,
@@ -43,7 +39,7 @@ SDK_ROOT = os.path.abspath('./')
 if os.path.exists(SDK_ROOT + '/libraries'):
     libraries_path_prefix = SDK_ROOT + '/libraries'
 else:
-    libraries_path_prefix = os.path.dirname(SDK_ROOT) + '/libraries'
+    libraries_path_prefix = os.path.dirname(SDK_ROOT) + '/../libraries'
 
 SDK_LIB = libraries_path_prefix
 Export('SDK_LIB')
