--- a/projects/art_pi_blink_led/SConstruct
+++ b/projects/art_pi_blink_led/SConstruct
@@ -43,7 +43,7 @@ Export('SDK_LIB')
 # prepare building environment
 objs = PrepareBuilding(env, RTT_ROOT, has_libcpu=False)
 
-stm32_library = 'STM32H7xx_HAL'
+stm32_library = 'STM32H7RSxx_HAL'
 rtconfig.BSP_LIBRARY_TYPE = stm32_library
 
 if not os.path.exists('libraries'):
