--- a/projects/art_pi_uf2/.config
+++ b/projects/art_pi_uf2/.config
@@ -1124,7 +1124,7 @@ CONFIG_BSP_USING_UART4=y
 # CONFIG_BSP_USING_QSPI is not set
 # CONFIG_BSP_USING_I2C is not set
 # CONFIG_BSP_USING_SDIO is not set
-# CONFIG_BSP_USING_SDRAM is not set
+# CONFIG_BSP_USING_PSRAM is not set
 # CONFIG_BSP_USING_ETH is not set
 # CONFIG_BSP_USING_LCD is not set
 # CONFIG_BSP_USING_DCMI is not set
@@ -1142,7 +1142,7 @@ CONFIG_BSP_USING_UART4=y
 # CONFIG_ART_PI_USING_OTA_LIB is not set
 # CONFIG_ART_PI_TouchGFX_LIB is not set
 # CONFIG_ART_PI_USING_FTP_LIB is not set
-CONFIG_FIRMWARE_EXEC_USING_QSPI_FLASH=y
+CONFIG_FIRMWARE_EXEC_USING_OSPI_FLASH=y
 # CONFIG_FIRMWARE_EXEC_USING_QEMU is not set
 CONFIG_RT_STUDIO_BUILT_IN=y
 
