--- a/libraries/Kconfig
+++ b/libraries/Kconfig
@@ -66,8 +66,12 @@ menu "Onboard Peripheral Drivers"
                     config BSP_USING_TOUCH
                     select BSP_USING_I2C
                     select BSP_USING_I2C1
+                    select RT_USING_TOUCH               
                     bool "enable Touch GT9147"
                     select PKG_USING_GT9147                    
+                    default n
+		    bool "enable Touch GT1151 GT1158"
+                    select PKG_USING_GT1151                    
                     default n
                 endif
         endif
@@ -170,43 +174,43 @@ menu "On-chip Peripheral"
                 select RT_USING_I2C_BITOPS
                 select RT_USING_PIN
                 if BSP_USING_I2C1
-                    comment "Notice: PB6 --> 22; PB7 --> 23" 
+                    comment "Notice: PB8 --> 24; PB9 --> 25" 
                     config BSP_I2C1_SCL_PIN
                         int "I2C1 scl pin number"
                         range 0 175
-                        default 22
+                        default 24
                     config BSP_I2C1_SDA_PIN
                         int "I2C1 sda pin number"
                         range 0 175
-                        default 23
+                        default 25
                 endif
             menuconfig BSP_USING_I2C2
                 bool "Enable I2C2 BUS (software simulation)"
                 default n
                 if BSP_USING_I2C2
-                    comment "Notice: PH13 --> 125; PH15 --> 127"
+                    comment "Notice: PF0 --> 80; PF1 --> 81"
                     config BSP_I2C2_SCL_PIN
                         int "i2c2 scl pin number"
                         range 1 176
-                        default 127
+                        default 81
                     config BSP_I2C2_SDA_PIN
                         int "I2C2 sda pin number"
                         range 0 175
-                        default 125
+                        default 80
                 endif
             menuconfig BSP_USING_I2C3
                 bool "Enable I2C3 BUS (software simulation)"
                 default n
                 if BSP_USING_I2C3
-                    comment "Notice: PH12 --> 124; PH11 --> 123"
+                    comment "Notice: PA4 --> 4; PA7 --> 7"
                     config BSP_I2C3_SCL_PIN
                         int "i2c3 scl pin number"
                         range 0 175
-                        default 123
+                        default 7
                     config BSP_I2C3_SDA_PIN
                         int "I2C3 sda pin number"
                         range 0 175
-                        default 124
+                        default 4
                 endif
         endif
 		
