--- a/libraries/modules/btstack-v0.0.1/SConscript
+++ b/libraries/modules/btstack-v0.0.1/SConscript
@@ -58,8 +58,11 @@ path += [cwd + '/rtt_adapter']
 
 LOCAL_CCFLAGS = ''
 if rtconfig.CROSS_TOOL == 'keil':
-    LOCAL_CCFLAGS += ' --gnu'
+    if rtconfig.PLATFORM == 'armcc':
+        LOCAL_CCFLAGS += ' --gnu'
+    elif rtconfig.PLATFORM == 'armclang':
+        LOCAL_CCFLAGS += ' -std=gnu99'
 
-group = DefineGroup('RTT_BTSTACK', src, depend = [''], CPPPATH = path, LOCAL_CCFLAGS = LOCAL_CCFLAGS)
+group = DefineGroup('RTT_BTSTACK', src, depend = ['PKG_USING_BTSTACK'], CPPPATH = path, LOCAL_CCFLAGS = LOCAL_CCFLAGS)
 
 Return('group')
