--- a/projects/art_pi_wifi/.config
+++ b/projects/art_pi_wifi/.config
@@ -189,7 +189,9 @@ CONFIG_RT_USING_SERIAL_V2=y
 CONFIG_RT_USING_MTD_NOR=y
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_PM is not set
-# CONFIG_RT_USING_RTC is not set
+CONFIG_RT_USING_RTC=y
+# CONFIG_RT_USING_ALARM is not set
+# CONFIG_RT_USING_SOFT_RTC is not set
 CONFIG_RT_USING_SDIO=y
 CONFIG_RT_SDIO_STACK_SIZE=512
 CONFIG_RT_SDIO_THREAD_PRIORITY=15
@@ -248,7 +250,7 @@ CONFIG_RT_WLAN_WORKQUEUE_THREAD_PRIO=15
 # CONFIG_RT_WLAN_DEBUG is not set
 # CONFIG_RT_USING_VIRTIO is not set
 CONFIG_RT_USING_PIN=y
-# CONFIG_RT_USING_KTIME is not set
+CONFIG_RT_USING_KTIME=y
 # CONFIG_RT_USING_HWTIMER is not set
 
 #
@@ -279,20 +281,21 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # POSIX (Portable Operating System Interface) layer
 #
 CONFIG_RT_USING_POSIX_FS=y
-# CONFIG_RT_USING_POSIX_DEVIO is not set
-# CONFIG_RT_USING_POSIX_STDIO is not set
+CONFIG_RT_USING_POSIX_DEVIO=y
+CONFIG_RT_USING_POSIX_STDIO=y
 CONFIG_RT_USING_POSIX_POLL=y
 CONFIG_RT_USING_POSIX_SELECT=y
 # CONFIG_RT_USING_POSIX_EVENTFD is not set
 # CONFIG_RT_USING_POSIX_TIMERFD is not set
 CONFIG_RT_USING_POSIX_SOCKET=y
-# CONFIG_RT_USING_POSIX_TERMIOS is not set
+CONFIG_RT_USING_POSIX_TERMIOS=y
 # CONFIG_RT_USING_POSIX_AIO is not set
 # CONFIG_RT_USING_POSIX_MMAN is not set
-# CONFIG_RT_USING_POSIX_DELAY is not set
-# CONFIG_RT_USING_POSIX_CLOCK is not set
+CONFIG_RT_USING_POSIX_DELAY=y
+CONFIG_RT_USING_POSIX_CLOCK=y
 # CONFIG_RT_USING_POSIX_TIMER is not set
-# CONFIG_RT_USING_PTHREADS is not set
+CONFIG_RT_USING_PTHREADS=y
+CONFIG_PTHREAD_NUM_MAX=8
 # CONFIG_RT_USING_MODULE is not set
 
 #
@@ -548,7 +551,17 @@ CONFIG_PKG_NETUTILS_VER_NUM=0x99999
 # CONFIG_PKG_USING_AGILE_TELNET is not set
 # CONFIG_PKG_USING_NMEALIB is not set
 # CONFIG_PKG_USING_PDULIB is not set
-# CONFIG_PKG_USING_BTSTACK is not set
+CONFIG_PKG_USING_BTSTACK=y
+CONFIG__GNU_SOURCE=1
+CONFIG_HAVE_DIRENT_STRUCTURE=1
+CONFIG_HAVE_DIR_STRUCTURE=1
+CONFIG_PKG_BTSTACK_PATH="/packages/iot/btstack"
+# CONFIG_PKG_BTSTACK_USING_HM is not set
+CONFIG_PKG_USING_BTSTACK_V001=y
+# CONFIG_PKG_USING_BTSTACK_V100 is not set
+# CONFIG_PKG_USING_BTSTACK_LATEST_VERSION is not set
+CONFIG_PKG_BTSTACK_VER_NUM=0x00001
+CONFIG_PKG_BTSTACK_VER="v0.0.1"
 # CONFIG_PKG_USING_BT_CYW43012 is not set
 # CONFIG_PKG_USING_CYW43XX is not set
 # CONFIG_PKG_USING_LORAWAN_ED_STACK is not set
@@ -773,51 +786,6 @@ CONFIG_PKG_NETUTILS_VER_NUM=0x99999
 # CONFIG_PKG_USING_MCUBOOT is not set
 # CONFIG_PKG_USING_TINYUSB is not set
 # CONFIG_PKG_USING_CHERRYUSB is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_FS is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_HS is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_AUTO is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_CUSTOM is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_FSDEV is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_ST is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_ESP is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_AT is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_GD is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_HC is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_CUSTOM is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_MUSB_ES is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_MUSB_SUNXI is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_MUSB_BK is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_MUSB_CUSTOM is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_CHIPIDEA_MCX is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_CHIPIDEA_CUSTOM is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_BL is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_HPM is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_AIC is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_CH32 is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_PUSB2 is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_NONE is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_ACM is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_MSC is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_HID_KEYBOARD is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_HID_MOUSE is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_HID_CUSTOM is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_VIDEO is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_AUDIO_V1_MIC_SPEAKER is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_AUDIO_V2_MIC_SPEAKER is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_RNDIS is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_ECM is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_NCM is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_ACM_MSC is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_ACM_MSC_HID is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_WINUSBV1 is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_WINUSBV2_CDC is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_WINUSBV2_HID is not set
-# CONFIG_PKG_USING_CHERRYUSB_LATEST_VERSION is not set
-# CONFIG_PKG_USING_CHERRYUSB_V010400 is not set
-# CONFIG_PKG_USING_CHERRYUSB_V010301 is not set
-# CONFIG_PKG_USING_CHERRYUSB_V010300 is not set
-# CONFIG_PKG_USING_CHERRYUSB_V010200 is not set
-# CONFIG_PKG_USING_CHERRYUSB_V001002 is not set
 # CONFIG_PKG_USING_KMULTI_RTIMER is not set
 # CONFIG_PKG_USING_TFDB is not set
 # CONFIG_PKG_USING_QPC is not set
@@ -1380,6 +1348,11 @@ CONFIG_BSP_USING_UART4=y
 CONFIG_BSP_UART4_RX_BUFSIZE=256
 CONFIG_BSP_UART4_TX_BUFSIZE=0
 # CONFIG_BSP_USING_UART6 is not set
+CONFIG_BSP_USING_UART7=y
+# CONFIG_BSP_UART7_RX_USING_DMA is not set
+# CONFIG_BSP_UART7_TX_USING_DMA is not set
+CONFIG_BSP_UART7_RX_BUFSIZE=256
+CONFIG_BSP_UART7_TX_BUFSIZE=0
 # CONFIG_BSP_USING_SPI is not set
 # CONFIG_BSP_USING_QSPI is not set
 # CONFIG_BSP_USING_I2C is not set
@@ -1395,7 +1368,7 @@ CONFIG_BSP_USING_SDIO2=y
 # CONFIG_BSP_USING_USBH is not set
 # CONFIG_BSP_USING_TIM is not set
 # CONFIG_BSP_USING_PWM is not set
-# CONFIG_BSP_USING_ONCHIP_RTC is not set
+CONFIG_BSP_USING_ONCHIP_RTC=y
 
 #
 # External Libraries
