[spi_configs] add SPI related config support for H7RS.

--- a/libraries/Kconfig
+++ b/libraries/Kconfig
@@ -186,13 +186,10 @@ menu "On-chip Peripheral"
             config BSP_USING_SPI4
                 bool "Enable SPI4"
                 default n
+            config BSP_USING_SPI5
+                bool "Enable SPI5 on raspberrypi 40P port."
+                default n
         endif
-        
-    config BSP_USING_QSPI
-        bool "Enable QSPI BUS"
-        select RT_USING_QSPI
-        select RT_USING_SPI
-        default n
 
     menuconfig BSP_USING_I2C
         bool "Enable I2C BUS (software simulation)"
