--- a/libraries/STM32H7RSxx_HAL_Driver/SConscript
+++ b/libraries/STM32H7RSxx_HAL_Driver/SConscript
@@ -51,9 +51,8 @@ if GetDepend(['RT_USING_SDIO']):
 #     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c.c']
 #     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c_ex.c']
 
-# if GetDepend(['RT_USING_SPI']):
-#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi.c']
-#     src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_qspi.c']
+if GetDepend(['RT_USING_SPI']):
+    src += ['Src/stm32h7rsxx_hal_spi.c']
 
 # if GetDepend(['RT_USING_USB_HOST']) or GetDepend(['RT_USING_USB_DEVICE']):
 #    # src += ['STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pccard.c']
