--- a/projects/art_pi_uf2/.settings/projcfg.ini
+++ b/projects/art_pi_uf2/.settings/projcfg.ini
@@ -1,20 +1,19 @@
 #RT-Thread Studio Project Configuration
-#Tue Jan 07 10:00:17 CST 2025
-project_type=rt-thread
-chip_name=STM32H750XBHx
-os_branch=full
-example_name=art_pi_uf2
-os_version=5.1.0
-selected_rtt_version=5.1.0
+#Mon Jun 13 15:35:21 CST 2022
 cfg_version=v3.0
-board_base_nano_proj=False
-is_use_scons_build=True
-output_project_path=E\:\\MyCode\\GitCode\\sdk-bsp-stm32h7r-realthread-artpi2\\projects
-project_base_bsp=true
+board_name=STM32H7R7-RT-ART-PI2
+example_name=art_pi2_uf2
 hardware_adapter=ST-LINK
-project_name=art_pi_uf2
+board_base_nano_proj=False
+project_type=rt-thread
+chip_name=STM32H7R7L8HxH
+selected_rtt_version=5.1.0
+bsp_version=0.3.0
+os_branch=full
+output_project_path=E\:\\software\\Git\\GitRepository\\ART-PI2\\sdk-bsp-stm32h7r-realthread-artpi2\\projects\\art_pi2_uf2
 is_base_example_project=True
-board_name=STM32H750-RT-ART-Pi
-device_vendor=STMicroelectronics
-bsp_version=1.3.0
-bsp_path=repo/Local/Board_Support_Packages/STMicroelectronics/STM32H750-RT-ART-Pi/1.3.0
+is_use_scons_build=True
+project_base_bsp=true
+project_name=art_pi2_uf2
+os_version=5.1.0
+bsp_path=repo/Local/Board_Support_Packages/RealThread/STM32H750-RT-ART-PI/0.3.0/sdk-bsp-stm32h750-realthread-artpi-master
