--- a/RealThread_STMH750-ART-Pi.yaml
+++ b/RealThread_STMH750-ART-Pi.yaml
@@ -1,14 +1,14 @@
 ---
 yaml_version: 3
-pkg_version: 1.3.0
+pkg_version: 1.0.0
 pkg_vendor: RealThread
 pkg_type: Board_Support_Packages
 board:
-  name: STM32H750-RT-ART-Pi
-  version: Rev.A
+  name: STM32H7R7-RT-ART-PI2
+  version: 1.0.0
   vendor: RT-Thread
-  description_zh: ART-Pi 是 RT-Thread 团队经过半年的精心准备，专门为嵌入式软件工程师、开源创客设计的一款极具扩展功能的 DIY 开源硬件.
-  description_en: ART-Pi is a DIY open source hardware specially designed for embedded software engineers and open source makers after six months of careful preparation by RT-Thread team
+  description_zh: ART-Pi2 是 RT-Thread 团队经过半年的精心准备，专门为嵌入式软件工程师、开源创客设计的一款极具扩展功能的 DIY 开源硬件.
+  description_en: ART-Pi2 is a DIY open source hardware specially designed for embedded software engineers and open source makers after six months of careful preparation by RT-Thread team
   small_image: documents/figures/board_small.png
   large_image: documents/figures/board_large.png
   sale_contact_cn: https://www.rt-thread.org/
@@ -24,8 +24,8 @@ chip:
   device_vendor: STMicroelectronics
   family_name: STM32
   series_name: STM32H7
-  sub_series_name: STM32H750
-  chip_name: STM32H750XBHx
+  sub_series_name: STM32H7R7
+  chip_name: STM32H7R7L8HxH
   rx_name: PI9
   tx_name: PA0
   clock_source: HSE
@@ -34,10 +34,10 @@ chip:
   uart_name: UART4
 docs:
 - file: "documents/UM5001-RT-Thread ART-Pi 快速上手.md"
-  title: "RT-Thread ART-Pi 快速上手"
+  title: "RT-Thread ART-Pi2 快速上手"
   category: manual
-- file: documents/board/STM32H7/STM32H750xx Datasheet.pdf
-  title: STM32h750xx Datasheet
+- file: documents/board/STM32H7/STM32H7R7x8 Datasheet.pdf
+  title: STM32H7R7x8 Datasheet
   category: sheet
 features:
 - STM32H750XBH6 microcontroller featuring 128 Kbytes of Flash memory, 1024 Kbytes of RAM in an TFBGA240 package
@@ -70,7 +70,7 @@ features_zh:
 - "Two ST-LINK LEDs: D4 (blue), D4 (red)"
 - Two push-buttons (user and reset)
 template_projects:
-- project_name: art_pi_blink_led
+- project_name: art_pi2_blink_led
   project_description: creat this peoject if user choose rt-thread project
   project_type: rt-thread|@full|@5.1.0
   builtin_files:
@@ -96,7 +96,7 @@ template_projects:
     target_path_offset: ''
     files_and_folders: []
 example_projects: 
-- project_name: art_pi_blink_led
+- project_name: art_pi2_blink_led
   project_description: creat this peoject if user choose rt-thread project
   project_type: rt-thread|@full|@5.1.0
   builtin_files:
@@ -121,7 +121,7 @@ example_projects:
     source_path_offset: ''
     target_path_offset: ''
     files_and_folders: []
-- project_name: art_pi_bootloader
+- project_name: art_pi2_bootloader
   project_description: creat this peoject if user choose rt-thread project
   project_type: rt-thread|@full|@5.1.0
   builtin_files:
@@ -146,7 +146,7 @@ example_projects:
     source_path_offset: ''
     target_path_offset: ''
     files_and_folders: []    
-- project_name: art_pi_lvgl_demo
+- project_name: art_pi2_lvgl_demo
   project_description: creat this peoject if user choose rt-thread project
   project_type: rt-thread|@full|@5.1.0
   builtin_files:
@@ -171,7 +171,7 @@ example_projects:
     source_path_offset: ''
     target_path_offset: ''
     files_and_folders: []    
-- project_name: art_pi_sdcard
+- project_name: art_pi2_sdcard
   project_description: creat this peoject if user choose rt-thread project
   project_type: rt-thread|@full|@5.1.0
   builtin_files:
@@ -192,7 +192,7 @@ example_projects:
     source_path_offset: ''
     target_path_offset: ''
     files_and_folders: []    
-- project_name: art_pi_uf2
+- project_name: art_pi2_uf2
   project_description: creat this peoject if user choose rt-thread project
   project_type: rt-thread|@full|@5.1.0
   builtin_files:
@@ -217,7 +217,7 @@ example_projects:
     source_path_offset: ''
     target_path_offset: ''
     files_and_folders: []
-- project_name: art_pi_wifi
+- project_name: art_pi2_wifi
   project_description: creat this peoject if user choose rt-thread project
   project_type: rt-thread|@full|@5.1.0
   builtin_files:
