修改ci文件中文件夹名称

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -50,12 +50,12 @@ jobs:
       fail-fast: false
       matrix:
        legs:
-         - {RTT_BSP: "art_pi_blink_led"}
-         - {RTT_BSP: "art_pi_bootloader"}
-         - {RTT_BSP: "art_pi_lvgl_demo"}
-         - {RTT_BSP: "art_pi_sdcard"}
-         - {RTT_BSP: "art_pi_uf2"}
-         - {RTT_BSP: "art_pi_wifi"}
+         - {RTT_BSP: "art_pi2_blink_led"}
+         - {RTT_BSP: "art_pi2_bootloader"}
+         - {RTT_BSP: "art_pi2_lvgl_demo"}
+         - {RTT_BSP: "art_pi2_sdcard"}
+         - {RTT_BSP: "art_pi2_uf2"}
+         - {RTT_BSP: "art_pi2_wifi"}
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
